Sonar: Fix bad notes